--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "src"]
-	path = src
+[submodule "src/WebARKitLib"]
+	path = src/WebARKitLib
 	url = https://github.com/webarkit/WebARKitLib.git
